# SadnTired-COS214-Project

./: Api.cpp  Builder.h  Chain of Responsibility.h  Customer.cpp  Customer.h  Facade.h  Factory.h  IColleague.h  Inventory.cpp  Inventory.h  Plant.cpp  Plant.h  PlantFactory.cpp  PlantFactory.h  PlantState.cpp  PlantState.h  README.md  README.txt  StaffManager.h  StaffReaction.cpp  State.h  Strategies.h  WateringStrategy.h  main.cpp
Backend/: Api.cpp  AskHelpCommand.cpp  AskHelpCommand.h  BrowsePlantsCommand.cpp  BrowsePlantsCommand.h  CheckStockCommand.cpp  CheckStockCommand.h  ConcreteOrderBuilder.cpp  ConcreteOrderBuilder.h  Customer.cpp  Customer.h  CustomerCommand.cpp  CustomerCommand.h  DecorativePot.cpp  Doxyfile  Facade.cpp  Facade.h  GardenerHandler.cpp  GardenerHandler.h  GiftWrapping.h  IColleague.cpp  IMediator.cpp  IObserver.h  ISubject.cpp  Inventory.cpp  Inventory.h  InventoryManager.cpp  InventoryManager.h  Makefile  ManagerHandler.cpp  (+51 more)
J/: CMakeLists.txt  Customer.h  Plant.h  StaffAction.h  StaffCommand.h  StaffGardener.cpp  StaffGardener.h  StaffManager.h  StaffMember.cpp  StaffMember.h  StaffReaction.h  StaffSalesman.h  WaterCommand.cpp  main.cpp
Skeleton Implementations/: CMakeLists.txt  Customer.cpp  Customer.h  ObserverMediator.h  StaffAction.h  StaffCommand.h  StaffGardener.cpp  StaffGardener.h  StaffManager.cpp  StaffManager.h  StaffMember.cpp  StaffMember.h  StaffReaction.cpp  main.cpp
code/: Api.cpp  CMakeLists.txt  Commands.h  Composite.h  ConcreteOrderBuilder.h  DecorativePot.cpp  DecorativePot.h  Decorator.h  GiftWrapping.cpp  Makefile  ObserverMediator.h  OrderBuilder.cpp  OrderBuilder.h  OrderDirector.cpp  OrderDirector.h  Product.cpp  ProductItem.cpp  TemplateMethod.h  TestingMain.cpp  main  makefile
(+533 files in other folders)
